--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@
         background: #FFFFFF;
         border: 1px solid #BFBFBF;
         border-radius: 8px;
+        padding: 28px 32px 28px 32px;
     }
 
     input[type="submit"] {
