--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@
         flex-direction: column;
     }
 
+    .form-label {
+        color: #808080;
+    }
+
     input[type="text"] {
         background: #FFFFFF;
         border: 1px solid #BFBFBF;
@@ -86,7 +90,7 @@
     footer {
         background: #1C1C1C;
         width: 100%;
-        height: 200px;
+        height: 420px;
         margin-top: 200px;
     }
 
