--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
         gap: 50px;
     }
 
-    .nav-span {
+    .nav-link {
         color: #333333;
     }
 
@@ -43,6 +43,10 @@
         display: flex;
         width: 40%;
         flex-direction: column;
+    }
+
+    .text-div > p, .text-div > span {
+        color: #666666;
     }
 
     form {
@@ -90,12 +94,82 @@
     footer {
         background: #1C1C1C;
         width: 100%;
-        height: 420px;
+        /* height: 420px; */
         margin-top: 200px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .big-footer-div {
+        background: #1C1C1C;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: baseline;
+        padding-top: 80px;
+        padding-bottom: 70px;
+    }
+
+    .footer-div {
+        display: flex;
+        flex-direction: column;
+        row-gap: 16px;
+    }
+
+    .big-footer-div > div:first-child {
+        align-self: center;
+    }
+
+    .footer-div > h3 {
+        color: #FFFFFF;
+    }
+
+    .footer-span {
+        color: #FFFFFF;
+        opacity: 0.6;
+    }
+
+    .copyright-div {
+        padding: 20px 0;
+    }
+
+    .copyright-span {
+        color: #FFFFFF;
+        align-self: flex-end;
+        justify-content: center;
+        display: flex;
+        flex-direction: row;
     }
 
     @media only screen and (min-width: 768px) {
         body {
 
+        }
+
+    }
+    
+    @media only screen and (min-width: 840px) {
+        .navbar {
+            display: flex;
+            background: #FFFFFF;
+            width: 100%;
+            justify-content: flex-end;
+            align-items: center;
+            padding: 32px;
+            gap: 50px;
+        }
+
+        .nav-link {
+            color: #333333;
+        }
+    
+        .nav-button {
+            background: #066AB3;
+            color: #FFFFFF;
+            padding: 18px;
+            border-radius: 8px;
         }
     }
