--- a/style.css
+++ b/style.css
@@ -10,14 +10,96 @@
         margin: 0;
     }
     
+    header {
+        position: relative;
+    }
+
     .navbar {
-        display: flex;
+        display: none;
         background: #FFFFFF;
         width: 100%;
         justify-content: flex-end;
         align-items: center;
         padding: 32px;
         gap: 50px;
+        height: 100vh;
+    }
+
+    .nav-toggle:checked ~ .navbar {
+        display: flex;
+        background: #1C1C1C;
+        width: 50%;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: center;
+        padding: 32px;
+        gap: 50px;
+        position: fixed;
+    }
+
+    .nav-toggle:checked ~ .nav-toggle-label {
+        color: #FFFFFF;
+    }
+
+    .nav-toggle:checked ~ .navbar .nav-link {
+        color: #FFFFFF;
+    }
+
+    .nav-toggle:checked ~ .navbar .nav-button {
+        background: #066AB3;
+        color: #FFFFFF;
+        padding: 18px;
+        border-radius: 8px;
+    }
+
+    .nav-toggle {
+        display: none;
+    }
+
+    .nav-toggle-label {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        display: flex;
+        margin-top: 18px;
+        margin-left: 18px;
+    }
+
+    .nav-toggle-label span,
+    .nav-toggle-label span::before,
+    .nav-toggle-label span::after {
+        position: relative;
+        display: flex;
+        background: black;
+        height: 2px;
+        width: 2em;
+        border-radius: 2px;
+    }
+
+    .nav-toggle-label span::before,
+    .nav-toggle-label span::after {
+        content: '';
+        position: absolute;
+    }
+
+    .nav-toggle-label span::before {
+        bottom: 7px;
+    }
+
+    .nav-toggle-label span::after {
+        top: 7px;
+    }
+
+    .nav-toggle:checked ~ .nav-toggle-label span,
+    .nav-toggle:checked ~ .nav-toggle-label span::before,
+    .nav-toggle:checked ~ .nav-toggle-label span::after {
+        background: #FFFFFF;
+    }
+
+    .overflow {
+        height: 100vh;
+        overflow: hidden;
     }
 
     .nav-link {
@@ -34,14 +116,15 @@
     main {
         display: flex;
         width: 100%;
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
         justify-content: space-around;
+        margin-top: 48px;
     }
 
     .text-div {
         display: flex;
-        width: 40%;
+        width: 90%;
         flex-direction: column;
     }
 
@@ -51,7 +134,7 @@
 
     form {
         display: flex;
-        width: 40%;
+        width: 90%;
         margin-top: 120px;
         flex-direction: column;
         gap: 16px;
@@ -59,7 +142,7 @@
 
     .input-div {
         display: flex;
-        width: 80%;
+        width: 100%;
         flex-direction: column;
     }
 
@@ -111,6 +194,9 @@
         align-items: baseline;
         padding-top: 80px;
         padding-bottom: 70px;
+        padding-left: 12px;
+        padding-right: 12px;
+        flex-wrap: wrap;
     }
 
     .footer-div {
@@ -120,7 +206,8 @@
     }
 
     .big-footer-div > div:first-child {
-        align-self: center;
+        text-align: center;
+        width: 100%;
     }
 
     .footer-div > h3 {
@@ -149,6 +236,51 @@
 
         }
 
+        main {
+            display: flex;
+            width: 100%;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-around;
+        }
+
+        .text-div {
+            display: flex;
+            width: 40%;
+            flex-direction: column;
+        }
+
+        form {
+            display: flex;
+            width: 40%;
+            margin-top: 120px;
+            flex-direction: column;
+            gap: 16px;
+        }
+
+        .input-div {
+            display: flex;
+            width: 80%;
+            flex-direction: column;
+        }
+
+        .big-footer-div > div:first-child {
+            align-self: center;
+            text-align: unset;
+            width: unset;
+        }
+
+        .big-footer-div {
+            background: #1C1C1C;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            align-items: baseline;
+            padding-top: 80px;
+            padding-bottom: 70px;
+            flex-wrap: nowrap;
+        }
     }
     
     @media only screen and (min-width: 840px) {
@@ -160,6 +292,7 @@
             align-items: center;
             padding: 32px;
             gap: 50px;
+            height: unset;
         }
 
         .nav-link {
@@ -171,5 +304,9 @@
             color: #FFFFFF;
             padding: 18px;
             border-radius: 8px;
+        }
+
+        .nav-toggle-label {
+            display: none;
         }
     }
